# TF2003-qvm

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile.in  README  bugs  build_cmake.sh  makevm-tg.bat  makevm.bat  meson.build  pvs.sh  qwprogs.dsp  qwprogs.dsw  qwprogs.sln  qwprogs.vcproj  qwprogs.vcxproj  qwprogs.vcxproj.filters  todo.txt  versions-qvm.txt  versions.txt
docs/: readme.txt  readme_en.txt  tg_features.txt  tg_features_en.txt  versions-qvm.txt  versions-qvm_en.txt  versions.txt
include/: bg_lib.h  bot.h  bot_waypoint.h  g_consts.h  g_local.h  g_public.h  g_syscalls.h  g_tf_consts.h  mathlib.h  menu.h  player.h  progdefs.h  progs.h  q_shared.h  qchars.h  qmalloc.h  qmd5.h  sentry.h  spy.h  tf_set.h  tfort.h  tg.h  vote.h
src/: Makefile.dl.in  Makefile.vm.in  actions.c  admin.c  admin_cmd.c  arena.c  bg_lib.c  buttons.c  clan.c  client.c  combat.c  coop.c  crc32.c  ctf.c  debug.c  demoman.c  doors.c  engineer.c  flare.c  g_cmd.c  g_main.c  g_mem.c  g_mod_command.c  g_spawn.c  g_syscalls.asm  g_syscalls.c  g_tf_utils.c  g_utils.c  game-tg.q3asm  game.q3asm  hook.c  items.c  mathlib.c  menu.c  misc.c  plats.c  player.c  pyro.c  q_shared.c  qmalloc.c  (+23 more)
src/bot/: ai-misc.c  ai.c  fighting.c  move.c  qw.c  ui.c  waypoint.c
tools/cross-cmake/: linux-amd64.cmake  linux-armhf.cmake  linux-i686.cmake  windows-x64.cmake  windows-x86.cmake
tools/lcc/lburg/: gram.c
tools/q3lcc/: CMakeLists.txt
tools/q3lcc/etc/: lcc.c
tools/q3lcc/src/: dagcheck.c
