project('qwprogs', 'c')

sources = [
    'src/bot/ai.c',
    'src/bot/ai-misc.c',
    'src/bot/fighting.c',
    'src/bot/move.c',
    'src/bot/qw.c',
    'src/bot/ui.c',
    'src/bot/waypoint.c',
    'src/actions.c',
    'src/admin.c',
    'src/admin_cmd.c',
    'src/arena.c',
    'src/buttons.c',
    'src/clan.c',
    'src/client.c',
    'src/combat.c',
    'src/coop.c',
    'src/crc32.c',
    'src/ctf.c',
    'src/debug.c',
    'src/demoman.c',
    'src/doors.c',
    'src/engineer.c',
    'src/flare.c',
    'src/g_cmd.c',
    'src/g_main.c',
    'src/g_mem.c',
    'src/g_mod_command.c',
    'src/g_spawn.c',
    'src/g_syscalls.c',
    'src/g_tf_utils.c',
    'src/g_utils.c',
    'src/hook.c',
    'src/items.c',
    'src/mathlib.c',
    'src/menu.c',
    'src/misc.c',
    'src/plats.c',
    'src/player.c',
    'src/pyro.c',
    'src/q_shared.c',
    'src/qmd5.c',
    'src/scout.c',
    'src/sentry.c',
    'src/server.c',
    'src/sniper.c',
    'src/spectate.c',
    'src/spy.c',
    'src/status.c',
    'src/subs.c',
    'src/tfort.c',
    'src/tforthlp.c',
    'src/tfortmap.c',
    'src/tforttm.c',
    'src/tg.c',
    'src/triggers.c',
    'src/tsoldier.c',
    'src/version.c',
    'src/vote.c',
    'src/weapons.c',
    'src/world.c'
]

library('qwprogs', sources,
	include_directories : include_directories('include'),
	c_args : '-DBOT_SUPPORT=1',
	dependencies : [
		meson.get_compiler('c').find_library('m', required : false)
	],
	name_prefix : ''
)
